--- a/SocialDistance/src/main/res/values-vi/strings.xml
+++ b/SocialDistance/src/main/res/values-vi/strings.xml
@@ -51,7 +51,7 @@
 
 
     <string name="url_privacy">https://ailabs.tw/taiwan-social-distancing-apppersonal-data-protection-note/</string>
-
+    <string name="url_faq">https://www.cdc.gov.tw/Category/Page/R8bAd_yiVi22CIr73qM2yw</string>
 
 
 
