Not Support - Add strings

--- a/SocialDistance/src/main/res/values-tl/strings.xml
+++ b/SocialDistance/src/main/res/values-tl/strings.xml
@@ -42,6 +42,14 @@
 
 
 
+
+
+
+
+
+
+
+
     <string name="menu_about">Introduction ng App</string>
 
     <string name="menu_cancel_alert">Isara ang warning notification</string>
@@ -52,6 +60,7 @@
 
     <string name="url_privacy">https://ailabs.tw/taiwan-social-distancing-apppersonal-data-protection-note/</string>
     <string name="url_faq">https://www.cdc.gov.tw/Category/Page/R8bAd_yiVi22CIr73qM2yw</string>
+    <string name="url_clean_cache">https://support.google.com/googleplay/answer/9037938</string>
 
 
 
