--- a/SocialDistance/src/main/res/values-zh-rTW/strings.xml
+++ b/SocialDistance/src/main/res/values-zh-rTW/strings.xml
@@ -101,6 +101,7 @@
     <string name="control_exposure">接觸通知服務</string>
     <string name="control_exposure_turn_off_title">要停用接觸通知功能嗎？</string>
     <string name="control_exposure_turn_off_detail">如果你接觸過 COVID-19 患者，系統將不會通知你</string>
+    <string name="control_not_found_notification">無風險時通知</string>
 
     <string name="date_yyyy_mm_dd">%1$d/%2$d/%3$d</string>
 
