--- a/SocialDistance/src/main/res/values/strings.xml
+++ b/SocialDistance/src/main/res/values/strings.xml
@@ -109,6 +109,17 @@
     <string name="cancel_alert_test_date_hint">Assessment Date</string>
     <string name="cancel_alert_description">Please enter the verification code provided by the local Department of Health. After submitting, the warning will be disabled.</string>
 
+    <string name="cancel_alert_acknowledgement">我已詳細閱讀並同意以上衛教資訊</string>
+    <string-array name="cancel_alert_intruction">
+        <item>I have taken a COVID-19 rapid test by myself, and the result was negative.\n</item>
+        <item>I will watch for my health status. If I have symptoms such as fever, respiratory symptoms, diarrhea, or new loss of taste/smell, I will take the COVID-19 rapid test.\n</item>
+        <item>If I test positive in my COVID-19 rapid test, I will wear a medical mask to get a PCR test at a nearby community testing site or a hospital, and do not taking the public transportation.\n</item>
+        <item>I have notified my family members that I have received a \"Exposure Notification\" warning, and they must take appropriate precautions such as washing hands frequently and wearing masks.\n</item>
+        <item>I will avoid unnecessary family gatherings and visits.\n</item>
+        <item>I will avoid participating in activities that cannot maintain social distancing and contact with unspecified people.\n</item>
+        <item>I will avoid participating in indoor activities or work where the masks are not required.\n</item>
+    </string-array>
+
     <string name="barcode_shortcut_label">1922 SMS</string>
     <string name="barcode_shortcut_label_long">Scan 1922 QR Code</string>
     <string name="barcode_hint_1922_invalid">Invalid 1922 SMS contact tracing QR code</string>
