--- a/SocialDistance/src/main/res/values-zh-rTW/strings.xml
+++ b/SocialDistance/src/main/res/values-zh-rTW/strings.xml
@@ -13,6 +13,8 @@
     <string name="introduction_privacy_description">臺灣社交距離 App 使用者無需註冊且不會有任何資料上傳，僅使用手持裝置間彼此藍牙訊號的強弱去計算每個使用者之間的距離。\n\n此去中心化服務會將自己接觸過的手持裝置隨機 ID 資訊儲存在各自的手持裝置中，並且以嚴密的技術將資料去識別化，以保護使用者隱私。</string>
     <string name="introduction_intro_title">減少疫情擴散機會</string>
     <string name="introduction_intro_description">如果 App 的使用者被確診具傳染性的疾病，他可以選擇發布他的手持裝置隨機 ID（以嚴密的技術去識別化），曾跟他的手持裝置有過近距離且維持一定時間接觸的人便會收到通知。且無法知道是誰，在兼顧個人隱私的情況下也保護公眾的健康。</string>
+    <string name="introduction_hcert_title">@string/hcert_full_name</string>
+    <string name="introduction_hcert_description">您可以透過 App 輕鬆儲存、管理與呈現您和家人的疫苗接種數位證明，透過 QR code 的方式提供掃描及驗證。且您的資料僅儲存在手機中，不需要網路連線也不會上傳到任何地方。</string>
 
     <string name="start_using">開始使用</string>
 
@@ -85,6 +87,7 @@
     <string name="upload_fail">上傳失敗</string>
     <string name="upload_fail_message_no_files">所選區間無資料可供上傳</string>
     <string name="upload_fail_message_invalid_code">無效的驗證碼</string>
+    <string name="upload_fail_message_no_granted_tek">若要上傳請再次點擊送出並分享</string>
 
     <string name="enter_verification_code">請輸入驗證碼</string>
     <string name="enter_verification_code_hint">請輸入驗證碼</string>
@@ -158,10 +161,12 @@
     <string name="hcert_detail_country">接種國家：</string>
     <string name="hcert_detail_certificate_issuer">數位證明發行機構：</string>
     <string name="hcert_detail_certificate_identifier">數位證明識別碼：</string>
+    <string name="hcert_detail_issue_date">數位證明產生日期：</string>
 
     <string name="hcert_delete_confirm_title">是否確認刪除？</string>
     <string name="hcert_delete_confirm_message">確認刪除%s的疫苗接種數位證明嗎？</string>
     <string name="hcert_limit_reached_message">數量已達上限</string>
+    <string name="hcert_expired">此證明已過期</string>
 
     <string name="date_yyyy_mm_dd">%1$d/%2$d/%3$d</string>
 
