--- a/SocialDistance/src/main/res/values/strings.xml
+++ b/SocialDistance/src/main/res/values/strings.xml
@@ -13,6 +13,8 @@
     <string name="introduction_privacy_description">Taiwan Social Distancing App use is anonymous - users do not need to register and no user data will be collected. The only form of data transmission involved is the observation of Bluetooth signals between handheld devices to calculate the distance between each user.\n\nUser privacy will be ensured via decentralized storage of anonymous IDs for individual devices; contact data will be compiled by each respective device.</string>
     <string name="introduction_intro_title">Reduce the Spread of Pandemic</string>
     <string name="introduction_intro_description">Users who have tested positive can choose to anonymously publish their device\'s anonymous IDs. When users with a positive test publish their results, people who have been in proximity to this device and maintained contact for a certain period of time will receive a notification. This process guarantees the anonymity and personal privacy of those who share their positive test results while contributing to keeping our communities informed and diligent in taking preventative and cautionary measures.</string>
+    <string name="introduction_hcert_title">@string/hcert_full_name</string>
+    <string name="introduction_hcert_description">The App provides an easy way to securely store and present COVID-19 Vaccination Certificate for you and your loved ones.\n\nYou also can use the QR code of the vaccination certificates for other people or organizations to verify your vaccination status. No internet connection is required and Your data is only stored locally on your mobile device.</string>
 
     <string name="start_using">Get started</string>
 
@@ -85,6 +87,7 @@
     <string name="upload_fail">Upload Failed</string>
     <string name="upload_fail_message_no_files">No data between start and end dates.</string>
     <string name="upload_fail_message_invalid_code">Invalid verification code.</string>
+    <string name="upload_fail_message_no_granted_tek">Click the submit button to upload and share your anonymous IDs.</string>
 
     <string name="enter_verification_code">Please Enter Verification Code</string>
     <string name="enter_verification_code_hint">Verification Code</string>
@@ -149,19 +152,21 @@
     <string name="hcert_apply">Apply</string>
     <string name="hcert_import">Import</string>
 
-    <string name="hcert_detail_target">Disease or agent targeted: </string>
-    <string name="hcert_detail_vaccine">Vaccine type: </string>
-    <string name="hcert_detail_medicinal_product">Product: </string>
-    <string name="hcert_detail_authorization_holder">Manufacturer: </string>
-    <string name="hcert_detail_dose">Dose: </string>
-    <string name="hcert_detail_date">Date of vaccination: </string>
-    <string name="hcert_detail_country">Country of vaccination: </string>
-    <string name="hcert_detail_certificate_issuer">Issuer: </string>
-    <string name="hcert_detail_certificate_identifier">UVCI: </string>
+    <string name="hcert_detail_target">Disease or agent targeted:\ </string>
+    <string name="hcert_detail_vaccine">Vaccine type:\ </string>
+    <string name="hcert_detail_medicinal_product">Product:\ </string>
+    <string name="hcert_detail_authorization_holder">Manufacturer:\ </string>
+    <string name="hcert_detail_dose">Dose:\ </string>
+    <string name="hcert_detail_date">Date of vaccination:\ </string>
+    <string name="hcert_detail_country">Country of vaccination:\ </string>
+    <string name="hcert_detail_certificate_issuer">Issuer:\ </string>
+    <string name="hcert_detail_certificate_identifier">UVCI:\ </string>
+    <string name="hcert_detail_issue_date">Certificate generated on:\ </string>
 
     <string name="hcert_delete_confirm_title">Are you sure you want to remove it?</string>
     <string name="hcert_delete_confirm_message">Are you sure you want to remove %s\'s vaccination certificate?</string>
     <string name="hcert_limit_reached_message">Exceeded vaccination certificates limits.</string>
+    <string name="hcert_expired">Expired</string>
 
     <string name="date_yyyy_mm_dd">%1$d/%2$d/%3$d</string>
 
