--- a/SocialDistance/src/main/res/values/strings.xml
+++ b/SocialDistance/src/main/res/values/strings.xml
@@ -60,6 +60,7 @@
     <string name="menu_control">Exposure Notification Settings</string>
     <string name="menu_faq">FAQ</string>
     <string name="menu_hints">Hints</string>
+    <string name="menu_settings">Settings</string>
 
     <string name="url_privacy">https://ailabs.tw/taiwan-social-distancing-apppersonal-data-protection-note/</string>
     <string name="url_faq">https://www.cdc.gov.tw/Category/Page/R8bAd_yiVi22CIr73qM2yw</string>
@@ -82,7 +83,7 @@
     <string name="upload_date_end_enter_hint">Please Enter End Date</string>
     <string name="upload_date_start_hint">Start Date</string>
     <string name="upload_date_end_hint">End Date</string>
-    <string name="upload_tek_description">Please enter the verification code provided by the local Department of Health. After submitting, your anonymous IDs will be uploaded. These data will be stored by the Taiwan Centers for Disease Control and will be automatically deleted after 10 days.</string>
+    <string name="upload_tek_description">Please enter the verification code provided by the Taiwan Centers for Disease Control. After submitting, your anonymous IDs will be uploaded. These data will be stored by the CDC and will be automatically deleted after 10 days.</string>
     <string name="upload_success">Upload Successful</string>
     <string name="upload_fail">Upload Failed</string>
     <string name="upload_fail_message_no_files">No data between start and end dates.</string>
@@ -113,7 +114,7 @@
     <string name="cancel_alert_test_date_hint">Assessment Date</string>
     <string name="cancel_alert_description">Please enter the verification code provided by the local Department of Health. After submitting, the warning will be disabled.</string>
 
-    <string name="cancel_alert_acknowledgement">我已詳細閱讀並同意以上衛教資訊</string>
+    <string name="cancel_alert_acknowledgement">I have read and agreed the How to Protect Yourself &amp; Others.</string>
     <string-array name="cancel_alert_intruction">
         <item>I have taken a COVID-19 rapid test by myself, and the result was negative.\n</item>
         <item>I will watch for my health status. If I have symptoms such as fever, respiratory symptoms, diarrhea, or new loss of taste/smell, I will take the COVID-19 rapid test.\n</item>
@@ -128,7 +129,7 @@
     <string name="barcode_shortcut_label_long">Scan 1922 QR Code</string>
     <string name="barcode_hint_1922_invalid">Invalid 1922 SMS contact tracing QR code.</string>
     <string name="barcode_hint_hcert_no_qr_code">Failed to detect vaccination certificate QR code.</string>
-    <string name="barcode_hint_hcert_invalid">Invalid vaccination certificate QR Code.</string>
+    <string name="barcode_hint_hcert_invalid">Invalid vaccination certificate QR code.</string>
     <string name="barcode_hint_hcert_duplicated">Duplicated vaccination certificate.</string>
     <string name="barcode_hint_hcert_expired">Expired vaccination certificate.</string>
     <string name="barcode_camera_permission_dialog_title">&appname; Would Like to Access the Camera</string>
@@ -192,10 +193,10 @@
 
     <string name="feature_barcode">New \"1922 SMS\" QR code scanning feature.</string>
     <string-array name="feature_barcode_tip">
-        <item>Tip 1 Shortcut: \nLong press the app icon on a Home screen, you will get a shortcut list. Then you can drag the \"1922 SMS\" shortcut to your Home screen.\n</item>
-        <item>Tip 2 Widget: \nLong press an empty space on a Home screen and tap \"Widgets.\" Then you can find the widget of \"&appname;\" app and drag it to your Home screen.\n</item>
+        <item>Tip 1 Shortcut:\nLong press the app icon on a Home screen, you will get a shortcut list. Then you can drag the \"1922 SMS\" shortcut to your Home screen.\n</item>
+        <item>Tip 2 Widget:\nLong press an empty space on a Home screen and tap \"Widgets.\" Then you can find the widget of \"&appname;\" app and drag it to your Home screen.\n</item>
         <item>➤ Tip 1 and Tip 2 are both recommended to add this function. Choose the one you prefer :D\n</item>
-        <item>Tip 3 Quick Settings: \nSwipe down from the top of your screen twice and tap the \"Edit\" button. (Different devices may have different steps.) Then add the \"1922 SMS\" button into the \"Quick Settings.\" For more detailed instruction, please refer to the Android Help Center.\n</item>
+        <item>Tip 3 Quick Settings:\nSwipe down from the top of your screen twice and tap the \"Edit\" button. (Different devices may have different steps.) Then add the \"1922 SMS\" button into the \"Quick Settings.\" For more detailed instruction, please refer to the Android Help Center.\n</item>
         <item>➤ It’s slightly slower launching from \"Quick Settings\" than from a shortcut or widget, but it’s convenient to activate the scanning function any time you swipe down your screen.</item>
     </string-array>
     <string name="feature_barcode_tip_split">:</string>
@@ -203,7 +204,7 @@
     <string name="feature_daily_summary">New \"Daily Summary\" page.</string>
     <string name="feature_hcert">Newly added Vaccination Certificate</string>
     <string name="feature_hcert_tip">Manage vaccination certificate for you and your loved ones.</string>
-    <string name="feature_not_found_notification_control">You can turn off No Detected Notification from the Exposure Notification Settings.</string>
+    <string name="feature_not_found_notification_control">You can turn off No Detected Notification from the \"Settings.\"</string>
     <string name="feature_hints">You can check the hints again from the menu.</string>
 
     <string name="confirm">Confirm</string>
